Actions
Bug #12611
closedrmclomv: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../sun4u/io/rmclomv.c: In function 'rmclomv_attach': ../../sun4u/io/rmclomv.c:402: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4u/io/rmclomv.c: In function 'refresh_name_cache': ../../sun4u/io/rmclomv.c:1624: error: passing argument 4 of 'rmclomv_do_cmd' makes integer from pointer without a cast ../../sun4u/io/rmclomv.c:1169: note: expected 'intptr_t' but argument is of type 'void *' ../../sun4u/io/rmclomv.c: In function 'rmclomv_ioctl': ../../sun4u/io/rmclomv.c:2899: error: passing argument 4 of 'rmclomv_do_cmd' makes integer from pointer without a cast ../../sun4u/io/rmclomv.c:1169: note: expected 'intptr_t' but argument is of type 'void *' ../../sun4u/io/rmclomv.c:2911: error: passing argument 4 of 'rmclomv_do_cmd' makes integer from pointer without a cast ../../sun4u/io/rmclomv.c:1169: note: expected 'intptr_t' but argument is of type 'void *' ../../sun4u/io/rmclomv.c: In function 'rmclomv_checkrmc': ../../sun4u/io/rmclomv.c:3008: error: passing argument 4 of 'rmclomv_do_cmd' makes integer from pointer without a cast ../../sun4u/io/rmclomv.c:1169: note: expected 'intptr_t' but argument is of type 'void *' ../../sun4u/io/rmclomv.c: In function 'plat_timesync': ../../sun4u/io/rmclomv.c:3396: error: passing argument 4 of 'rmclomv_do_cmd' makes integer from pointer without a cast ../../sun4u/io/rmclomv.c:1169: note: expected 'intptr_t' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 35420702b93f71061940bdddcc5401bcb0337e76
commit 35420702b93f71061940bdddcc5401bcb0337e76 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:07:09.000Z 12611 rmclomv: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions